# llvm-project

kernel-taint-tracker/: .gitignore  CMakeLists.txt  TaintTrackerPass.cpp  main.ll  run.sh
kernel-taint-tracker/c-testcases/: test_function_propagation.c  test_propagation_simple.c  test_propagation_simple_2.c  test_system.c
kernel-taint-tracker/llvm-testcases/: test_function_propagation.ll  test_propagation_simple.ll  test_system.ll
llvm/include/llvm/Transforms/TaintTracker/: TaintTracker.h
llvm/lib/Transforms/TaintTracker/: TaintTracker.cpp
